--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
   padding: 0;
 }
 
+body {
+  background: url(/img/1bg.jpg);
+  background-size: 100% 100%;
+}
+
 .text-center {
   text-align: center;
 }
